# ortp

./: .gitignore  CMakeLists.txt  make.bat  ortp-config.cmake.h.in
cmake/: CheckCCompiler.cmake  CheckCCompilerConst.c  CheckCCompilerInline.c  CheckPrototypeExists.cmake
include/ortp/: port.h  rtpsession.h
src/: ortp.c  rtpsession_inet.c
